@@ -1,5 +1,6 @@
 1998-05-19  Raja R Harinath  <harinath@cs.umn.edu>
 
+	* gnomesupport-h.c (strerror): Emit declaration.
 	* strerror.c: New file.  Imported from GNU libiberty.
 
 1998-05-19  Martin Baulig  <martin@home-of-linux.org>
